--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
 cortex-m-rt = { version = "0.7.3", features = ["device"] }
 # Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
 panic-halt = "0.2.0"
+panic-rtt-core = "0.2.1"
+rtt-target = "0.5.0"
 # Replace stm32f303xc with your target chip, see next section for more info
 stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
 
