--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,26 @@ required-features = []
 # Only set the critical section feature, if you are using a bare-metal platform
 # without any RTOS
 # See https://github.com/rust-embedded/critical-section for further details.
-cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
+cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
 cortex-m-rt = { version = "0.7.3", features = ["device"] }
 # Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
-panic-halt = "0.2.0"
+# panic-halt = "0.2.0"
 panic-rtt-core = "0.2.1"
 rtt-target = "0.5.0"
 # Replace stm32f303xc with your target chip, see next section for more info
 stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
+cortex-m-rtic = "1.1.4"
+panic-rtt-target = { version = "0.1.3" }
 
+[profile.dev]
+opt-level = 1
+codegen-units = 16
+debug = true
+lto = false
+
+
+[profile.release]
+opt-level = "s"   # optimize for size
+codegen-units = 1 # better optimizations
+debug = true      # symbols are nice and they don't increase the size on Flash
+lto = true        # better optimizations
